@@ -1,5 +1,12 @@
 2004-03-14  Bruno Haible  <bruno@clisp.org>
 
+	* m4/ioctl.m4 (CL_IOCTL): Set the bytes_ready variable to 0 before
+	calling ioctl FIONREAD.
+	* stream.d (listen_handle): Likewise.
+	Needed for Linux/ia64.
+
+2004-03-14  Bruno Haible  <bruno@clisp.org>
+
 	* makemake.in: For ia64 with gcc, reduce the optimization flags to -O
 	in general and -O0 for eval.d. Needed on Linux/ia64.
 
